--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "backend.js",
   "scripts": {
-   "test": "npx eslint .",
+   "test": "",
    "dev": "nodemon backend.js",
    "start": "node backend.js"
  },
