--- a/.github/workflows/main_spotigo.yml
+++ b/.github/workflows/main_spotigo.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
-        working-directory: src/backend
+        working-directory: /src/backend
         run: |
           npm install
           npm run build --if-present
