--- a/.github/workflows/main_spotigo.yml
+++ b/.github/workflows/main_spotigo.yml
@@ -22,11 +22,11 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
-        working-directory: src/backend
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+        working-directory: src/backend
         
 
       - name: Upload artifact for deployment job
@@ -54,5 +54,6 @@ jobs:
         with:
           app-name: 'Spotigo'
           slot-name: 'Production'
+          app-location: 'src/backend'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CF56D35838524E2093574F3C41D8B689 }}
           package: .
