--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "npx eslint .",
     "dev": "nodemon backend.js",
-    "start": "react-scripts start"
+    "start": "node backend.js"
   },
   "eslintConfig": {
     "extends": [
