--- a/.github/workflows/main_spotigo.yml
+++ b/.github/workflows/main_spotigo.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_PACKAGE_PATH: 'src/backend'
+
 jobs:
   build:
     runs-on: ubuntu-latest
