--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "backend.js",
   "scripts": {
-   "test": "",
-   "dev": "nodemon backend.js",
-   "start": "node backend.js"
- },
+    "test": "",
+    "dev": "nodemon backend.js",
+    "start": "node backend.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.2"
   }
 }
