--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "scripts": {
     "test": "npx eslint .",
     "dev": "nodemon backend.js",
-    "start": "node backend.js"
-  },
+    "start": "react-scripts start"
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
