--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -7,7 +7,7 @@ on: [push]
 
 env:
   AZURE_WEBAPP_NAME: Spotigo   # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: 'src/backend'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: 'backend'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '16.x'                # set this to the node version to use
 
 jobs:
