--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -27,7 +27,7 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
-      working-directory: /backend
+      working-directory: backend
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with: 
