--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "test": "npx eslint .",
     "dev": "nodemon backend.js",
-    "build": "npm run build",
+    "build": "react-scripts build",
     "start": "react-scripts start"
   },
   "eslintConfig": {
