--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,5 +49,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-react": "^7.31.10"
-  }
+  },
+  "homepage": "https://www.spotigo.site/"
 }
+   
