--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "backend.js",
   "scripts": {
-    "test": "",
+    "test": "npx eslint .",
     "dev": "nodemon backend.js",
     "start": "node backend.js"
   },
