--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "jest": "^27.5.1",
     "material-react-js": "^5.0.0-prerelease.4",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
@@ -51,4 +52,3 @@
   },
   "homepage": "https://www.spotigo.site/"
 }
-   
