--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -10,6 +10,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: 'backend'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '16.x'                # set this to the node version to use
 
+  # Build and Deploy to Azure
 jobs:
   build-and-deploy:
     name: Build and Deploy
